
??? 2005 - Release 0.3.10
Changes since release 0.3.9:

- The suggested syntax for setting and registering with the global
  evaluation date is now:
     Settings::instance().evaluationDate() = date;
     registerWith(Settings::instance().evaluationDate());

- Added Gaussian quadratures (thanks to Klaus Spanderen.)

- Added generic multi-dimensional stochastic process

- Added stochastic process array (thanks to Klaus Spanderen.)

- Multi-path generator now takes a generic stochastic process
